--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.0.1",
     "webpack-notifier": "^1.6.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1"
   }
 }
