--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "license": "MIT",
   "devDependencies": {
     "@symfony/webpack-encore": "^0.27.0",
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.0.1",
     "webpack-notifier": "^1.6.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "bootswatch": "^4.3.1"
   }
 }
