--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require": {
         "league/plates": "^3.3",
+        "middlewares/payload": "^2.1",
         "nyholm/psr7": "^1.2",
         "nyholm/psr7-server": "^0.3.0",
         "psr/http-factory": "^1.0",
@@ -29,7 +30,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\Http\\": "app/src"
+            "App\\Http\\": "app/src",
+            "Domain\\": "domain/src"
         }
     },
     "require-dev": {
