--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
 
-    root /opt/app/public;
+    root /opt/public;
     index index.php index.html index.htm;
 
     location / {
