--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack --mode=development",
+    "prod": "webpack --mode=production"
+  },
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.27.0",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.3",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
-    "jquery": "^3.4.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.0.1",
-    "webpack-notifier": "^1.6.0"
+    "sass-loader": "^8.0.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.1.2",
+    "typescript": "^3.6.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-manifest-plugin": "^2.1.1"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   }
 }
