add CORS middleware

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ SSO_HOST=enyo_front
 APP_ENV=production
 APP_DEBUG=false
 
+ALLOWED_DOMAIN=http://localhost
+
 DB_HOSTNAME=localhost
 DB_DATABASE=database
 DB_USERNAME=username
