--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.4",
     "typescript": "~3.7.2"
   },
