big refactoring: remove all frontend parts

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ SSO_HOST=enyo_front
 APP_ENV=production
 APP_DEBUG=false
 
-ALLOWED_DOMAIN=http://localhost
+ALLOWED_DOMAINS=http://localhost
 
 DB_HOSTNAME=localhost
 DB_DATABASE=database
