--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         }
     },
     "require": {
-        "league/plates": "^3.3",
         "middlewares/payload": "^2.1",
         "nyholm/psr7": "^1.2",
         "nyholm/psr7-server": "^0.3.0",
@@ -23,11 +22,10 @@
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0",
-        "quanta/container": "^0.3.2",
-        "quanta/validation": "@dev",
+        "quanta/container": "^0.3",
+        "quanta/validation": "^0.4",
         "symfony/dotenv": "^4.3",
-        "zendframework/zend-expressive-fastroute": "^3.0",
-        "zendframework/zend-expressive-helpers": "^5.3"
+        "zendframework/zend-expressive-fastroute": "^3.0"
     },
     "repositories": [
         {
@@ -42,6 +40,6 @@
         }
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.2"
+        "phpstan/phpstan": "^0.12.0"
     }
 }
