--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "typescript": "~3.7.2"
   },
