--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
+    "cross-fetch": "^3.0.4",
     "jquery": "^3.4.1",
     "md5": "^2.2.1",
     "node-sass": "^4.13.0",
