--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require": {
         "middlewares/payload": "^2.1",
+        "nikic/fast-route": "^1.3",
         "nyholm/psr7": "^1.2",
         "nyholm/psr7-server": "^0.3.0",
         "psr/http-factory": "^1.0",
@@ -24,8 +25,7 @@
         "psr/http-server-middleware": "^1.0",
         "quanta/container": "^0.3",
         "quanta/validation": "^0.4",
-        "symfony/dotenv": "^4.3",
-        "zendframework/zend-expressive-fastroute": "^3.0"
+        "symfony/dotenv": "^4.3"
     },
     "autoload": {
         "psr-4": {
