--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require": {
+        "http-interop/response-sender": "^1.0",
         "middlewares/payload": "^2.1",
         "nikic/fast-route": "^1.3",
         "nyholm/psr7": "^1.2",
