--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require": {
         "http-interop/response-sender": "^1.0",
-        "middlewares/payload": "^2.1",
+        "middlewares/cors": "^2.0",
+        "middlewares/payload": "^3.0",
         "nikic/fast-route": "^1.3",
         "nyholm/psr7": "^1.2",
         "nyholm/psr7-server": "^0.3.0",
