--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0",
         "quanta/container": "^0.3",
+        "quanta/http-middleware": "^0.3.0",
         "quanta/validation": "^0.4",
         "symfony/dotenv": "^4.3"
     },
