--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "psr/http-server-middleware": "^1.0",
         "quanta/container": "^0.3",
         "quanta/http-middleware": "^0.3.0",
+        "quanta/http-routing": "^0.1.0",
         "quanta/validation": "^0.4",
         "symfony/dotenv": "^4.3"
     },
