--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "cross-fetch": "^3.0.4",
+    "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
     "md5": "^2.2.1",
     "node-sass": "^4.13.0",
