--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         }
     },
     "require": {
+        "guzzlehttp/psr7": "^1.6",
+        "http-interop/http-factory-guzzle": "^1.0",
         "http-interop/response-sender": "^1.0",
         "middlewares/payload": "^3.0",
         "nikic/fast-route": "^1.3",
-        "nyholm/psr7": "^1.2",
-        "nyholm/psr7-server": "^0.3.0",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
