--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -19,7 +20,7 @@
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
     "md5": "^2.2.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -27,7 +28,6 @@
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.1",
-    "redux": "^4.0.4",
     "typescript": "~3.7.2"
   },
   "scripts": {
