--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "cross-fetch": "^3.0.4",
+    "cytoscape": "^3.13.0",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-euler": "^1.2.2",
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
     "md5": "^2.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-cytoscapejs": "^1.2.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
