--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/d3": "^5.7.2",
     "@types/jest": "^24.0.0",
     "@types/md5": "^2.1.33",
     "@types/node": "^12.0.0",
@@ -18,8 +19,7 @@
     "bootswatch": "^4.4.1",
     "cross-fetch": "^3.0.4",
     "cytoscape": "^3.13.0",
-    "cytoscape-cose-bilkent": "^4.1.0",
-    "cytoscape-euler": "^1.2.2",
+    "d3": "^5.15.0",
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
     "md5": "^2.2.1",
