--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/d3": "^5.7.2",
+    "@types/d3-force": "^1.2.1",
+    "@types/d3-scale": "^2.1.1",
+    "@types/d3-scale-chromatic": "^1.3.1",
     "@types/jest": "^24.0.0",
     "@types/md5": "^2.1.33",
     "@types/node": "^12.0.0",
@@ -20,13 +23,18 @@
     "cross-fetch": "^3.0.4",
     "cytoscape": "^3.13.0",
     "d3": "^5.15.0",
+    "d3-force": "^2.0.1",
+    "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
+    "konva": "^4.1.5",
     "md5": "^2.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^16.12.0",
+    "react-konva": "^16.12.0-0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
