--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 APP_HOST=localhost
 SSO_HOST=enyo_front
 
+APP_ENV=production
+APP_DEBUG=false
+
 DB_HOSTNAME=localhost
 DB_DATABASE=database
 DB_USERNAME=username
