simpler directory structure for api

--- a/app/composer.json
+++ b/app/composer.json
@@ -32,8 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\Http\\": "app/src",
-            "Domain\\": "domain/src"
+            "App\\": "app/src"
         }
     },
     "require-dev": {
