--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,16 +1,16 @@
 version: '3'
 services:
-    app:
+    api:
         user: ${UID}:${GID}
         volumes:
-            - ./app:/var/www/html:rw
+            - ./api:/var/www/html:rw
         environment:
             - APP_ENV=${APP_ENV}
             - APP_DEBUG=${APP_DEBUG}
     backend:
         volumes:
             - ./backend/default.conf:/etc/nginx/conf.d/default.conf:ro
-            - ./app:/var/www/html:ro
+            - ./api:/var/www/html:ro
         networks:
             - default
             - proxy
