--- a/production.yml
+++ b/production.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-    app:
+    api:
         volumes:
-            - app:/var/www/html:rw
+            - api:/var/www/html:rw
     backend:
         volumes:
-            - app:/var/www/html:ro
+            - api:/var/www/html:ro
     frontend:
         build: ./frontend
         ports:
@@ -13,4 +13,4 @@ services:
         depends_on:
             - backend
 volumes:
-    app:
+    api:
