use external library for endpoints

--- a/api/composer.json
+++ b/api/composer.json
@@ -26,6 +26,8 @@
         "psr/http-server-middleware": "^1.0",
         "quanta/container": "^0.3",
         "quanta/http-dispatcher": "^0.4.0",
+        "quanta/http-endpoint": "^0.1.0",
+        "quanta/http-responder": "^0.1.0",
         "quanta/http-routing": "^0.2.0",
         "quanta/validation": "^0.4",
         "symfony/dotenv": "^4.3"
