--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,8 +5,8 @@ services:
             - '8000:80'
         volumes:
             - ./backend/default.conf:/etc/nginx/conf.d/default.conf:ro
-            - ./api:/var/www/html:ro
-    api:
+            - ./app:/var/www/html:ro
+    app:
         user: ${UID}:${GID}
         volumes:
-            - ./api:/var/www/html:rw
+            - ./app:/var/www/html:rw
