--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,24 +20,24 @@
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
-    "cross-fetch": "^3.0.4",
+    "cross-fetch": "^3.0.6",
     "cytoscape": "^3.13.0",
     "d3": "^5.15.0",
     "d3-force": "^2.0.1",
     "d3-scale": "^3.2.1",
     "d3-scale-chromatic": "^1.5.0",
     "http-proxy-middleware": "^0.20.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "konva": "^4.1.5",
     "md5": "^2.2.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^16.12.0",
     "react-konva": "^16.12.0-0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.1",
     "typescript": "~3.7.2"
