add popper.js dependency

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "konva": "^4.1.5",
     "md5": "^2.2.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^16.12.0",
