--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,45 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.2.3",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/d3": "^5.7.2",
-    "@types/d3-force": "^1.2.1",
-    "@types/d3-scale": "^2.1.1",
-    "@types/d3-scale-chromatic": "^1.3.1",
-    "@types/jest": "^24.0.0",
-    "@types/md5": "^2.1.33",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.3",
-    "bootstrap": "^4.4.1",
-    "bootswatch": "^4.4.1",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/d3": "^5.16.4",
+    "@types/d3-force": "^1.2.2",
+    "@types/d3-scale": "^2.2.4",
+    "@types/d3-scale-chromatic": "^1.5.1",
+    "@types/jest": "^24.9.1",
+    "@types/md5": "^2.2.1",
+    "@types/node": "^12.19.5",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "bootstrap": "^4.5.3",
+    "bootswatch": "^4.5.3",
     "cross-fetch": "^3.0.6",
-    "cytoscape": "^3.13.0",
-    "d3": "^5.15.0",
-    "d3-force": "^2.0.1",
-    "d3-scale": "^3.2.1",
+    "cytoscape": "^3.17.0",
+    "d3": "^5.16.0",
+    "d3-force": "^2.1.1",
+    "d3-scale": "^3.2.3",
     "d3-scale-chromatic": "^1.5.0",
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.5.1",
-    "konva": "^4.1.5",
-    "md5": "^2.2.1",
+    "konva": "^4.2.2",
+    "md5": "^2.3.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-cytoscapejs": "^1.2.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-konva": "^16.12.0-0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
     "react-spring": "^8.0.27",
-    "react-toastify": "^5.4.1",
-    "typescript": "~3.7.2"
+    "react-toastify": "^5.5.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
