--- a/app/composer.json
+++ b/app/composer.json
@@ -9,10 +9,7 @@
         }
     ],
     "config": {
-        "sort-packages": true,
-        "platform": {
-            "php": "7.4"
-        }
+        "sort-packages": true
     },
     "require": {
         "guzzlehttp/psr7": "^1.6",
