use new version of quanta container, http-dispatcher and use quanta/http-route

--- a/app/composer.json
+++ b/app/composer.json
@@ -21,9 +21,10 @@
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0",
-        "quanta/container": "^0.5",
-        "quanta/http-dispatcher": "^0.4",
+        "quanta/container": "^0.6",
+        "quanta/http-dispatcher": "^0.5",
         "quanta/http-endpoint": "^0.5",
+        "quanta/http-route": "^0.2.0",
         "quanta/http-routing": "^0.3",
         "quanta/validation": "^0.7",
         "symfony/dotenv": "^5.1"
