add stats endpoint to backend

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DB_DATABASE=database
 DB_USERNAME=username
 DB_PASSWORD=password
 DB_PORT=5432
+
+REDIS_SCHEME=tcp
+REDIS_HOST=redis
+REDIS_PORT=6379
