--- a/app/composer.json
+++ b/app/composer.json
@@ -17,6 +17,7 @@
         "http-interop/response-sender": "^1.0",
         "middlewares/payload": "^3.0",
         "nikic/fast-route": "^1.3",
+        "predis/predis": "^1.1",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
