--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -6,6 +6,9 @@ server {
     index index.html;
 
     location / {
+        auth_basic             "Restricted";
+        auth_basic_user_file   /usr/share/nginx/html/.htpasswd;
+
         try_files $uri /index.html;
     }
 
