--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react": "^17.0.0",
     "react-bootstrap4-modal": "^1.7.6",
     "react-dom": "^17.0.0",
+    "react-ga": "^3.3.0",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
