allows 2 domain names

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 COMPOSE_PROJECT_NAME=vinland
 
-APP_HOST=localhost
+APP_HOST_PRIMARY=localhost
+APP_HOST_SECONDARY=localhost
 
 DB_HOSTNAME=localhost
 DB_DATABASE=database
