allows all hostnames in production

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 COMPOSE_PROJECT_NAME=vinland
 
-APP_HOST_PRIMARY=localhost
-APP_HOST_SECONDARY=localhost
+APP_HOST=localhost
 
 DB_HOSTNAME=localhost
 DB_DATABASE=database
