--- a/production-enyo.yml
+++ b/production-enyo.yml
@@ -5,7 +5,7 @@ services:
             - default
             - proxy
         labels:
-            - traefik.http.routers.vinland.rule=(Host(`${APP_HOST_PRIMARY}`) || Host(`${APP_HOST_SECONDARY}`))
+            - traefik.http.routers.vinland.rule=(Host(`${APP_HOST}`))
 networks:
     proxy:
         external: true
