--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.20.19",
     "@types/react": "^16.14.12",
     "@types/react-dom": "^16.9.14",
+    "@types/react-helmet": "^6.1.8",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "bootstrap": "^4.6.0",
@@ -34,6 +35,7 @@
     "react-bootstrap4-modal": "^1.7.6",
     "react-dom": "^17.0.0",
     "react-ga4": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
